cleaning up code

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,9 +27,15 @@ h1{
     font-family: 'Skranji', cursive;
     font-size: 40px;
     color: #e6a22d;
+    padding: 10px;
 }
 
 .Harry{
     width: 100%;
     color: white;
 }
+
+p{
+    padding: 5px;
+}
+
