--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,7 @@ body, html {
     padding: 16px;
     text-align: center;
     color: white;
+    bottom: 0;
 }
 h1{
     font-family: 'Skranji', cursive;
